# safe-ftdi

./: Cargo.toml  LICENSE-MIT.md  README.md
.cargo/: config
examples/: mercpcl.rs  read_eeprom.rs
src/: error.rs  lib.rs  mpsse.rs
